Organize the README and generate a scoped primop checklist